--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.0",
+    "react-responsive-image": "^5.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
